# my-cripto-currency

./: .gitignore  README.md  index.html  pyproject.toml
src/: blockchain.py  config.py  decoder.py  main.py  test.py
